GitVersion1/objects/Survey_Segmentation__c.object
<CustomObject>
    <description>CFN Poland segmentation survey for Step-1 and Step-2 (customized locally).</description>
    <fields>
        <fullName>AlignedOfferYes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has aligned offer, trade cond., service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BaxterPOS_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has 1 POS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BaxterPOS_4orMore__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has 4 or more POSes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BaxterSeasonal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POS available in season only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BaxterWholeYear__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POS available whole year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BiggerConsumersYes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dennis sales reach to bigger consumers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChangeProactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is proactive, open for changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChangeResistant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is change resistant, traditional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ConsiderChanges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consider changes, but expect validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_by_User_role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created by User role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatingFormulas_NotApplicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CreatingFormulas_NotApplicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DairyCGL_Basemix__c</fullName>
        <label>Dairy Basemix CGL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DairyCGL_Beef_Complete_Feed__c</fullName>
        <label>Dairy Beef Complete Feed CGL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DairyCGL_Beef_Concentrates__c</fullName>
        <label>Dairy Beef Concentrates CGL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DairyCGL_Calfs__c</fullName>
        <label>Dairy Calfs CGL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DairyCGL_Milk_Replacers__c</fullName>
        <label>Dairy Milk Replacers CGL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DairyTOT_Basemix__c</fullName>
        <formula>Dairy_Basemix__c+DairyCGL_Basemix__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dairy Basemix Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DairyTOT_Beef_Complete_Feed__c</fullName>
        <formula>Dairy_Beef_Complete_Feed__c+DairyCGL_Beef_Complete_Feed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dairy Beef Complete Feed Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DairyTOT_Beef_Concentrates__c</fullName>
        <formula>Dairy_Beef_Concentrates__c+DairyCGL_Beef_Concentrates__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dairy Beef Concentrates Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DairyTOT_Calfs__c</fullName>
        <formula>Dairy_Calfs__c+DairyCGL_Calfs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dairy Calfs Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DairyTOT_Milk_Replacers__c</fullName>
        <formula>Dairy_Milk_Replacers__c+DairyCGL_Milk_Replacers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dairy Milk Replacers Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dairy_Basemix__c</fullName>
        <label>Dairy Basemix</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dairy_Beef_Complete_Feed__c</fullName>
        <label>Dairy Beef Complete Feed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dairy_Beef_Concentrates__c</fullName>
        <label>Dairy Beef Concentrates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dairy_Calfs__c</fullName>
        <label>Dairy Calfs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dairy_Milk_Replacers__c</fullName>
        <label>Dairy Milk Replacers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dairy_Sales_Competitor__c</fullName>
        <label>Dairy Sales Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-4</fullName>
                </value>
                <value>
                    <fullName>&gt;4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dairy_Share_of_Wallet__c</fullName>
        <formula>IF(Dairy_Total__c=0, 0, Dairy_Total_Cargill__c / Dairy_Total__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dairy Share of Wallet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Dairy_Total_Cargill__c</fullName>
        <formula>DairyCGL_Basemix__c+DairyCGL_Beef_Complete_Feed__c+DairyCGL_Beef_Concentrates__c+DairyCGL_Calfs__c+DairyCGL_Milk_Replacers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dairy Total Cargill</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dairy_Total_Competitor__c</fullName>
        <formula>Dairy_Basemix__c+Dairy_Beef_Complete_Feed__c+Dairy_Beef_Concentrates__c+Dairy_Calfs__c+Dairy_Milk_Replacers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dairy Total Competitor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dairy_Total__c</fullName>
        <formula>Dairy_Total_Cargill__c+Dairy_Total_Competitor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dairy Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DealerSalesLevelAbove50pc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sells above 50%</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DealerSalesLevelBelow50pc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sells below 50%</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DontEmployPHbutPOS_Yes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Don&apos;t employ SREP but wants new POS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DontEmployPHnorPOS_Yes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Don&apos;t employ new SREP nor POS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmployPHMoreImportantThanPOS_Yes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employs SREP and more import. than POS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExtensiveOfferYes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has extensive feed offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FeedingFormulas_CompleteFeedAndConcentra__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feed formulas based on Complete Feed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FeedingFormulas_NotApplicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FeedingFormulas_NotApplicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FeedingFormulas_PremixAndIngredients__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feeding formulas based on Premixes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasAlignedOffer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offer aligned feed offer, trade condit.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasExtensiveOffer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offers complex feed offer, trade condit.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasSelectiveOffer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offers selective, wide feed offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IngredientsCGL__c</fullName>
        <label>Ingredients CGL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ingredients_Share_of_Wallet__c</fullName>
        <formula>IF(Ingredients_Total__c=0, 0, IngredientsCGL__c / Ingredients_Total__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingredients Share of Wallet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ingredients_Total__c</fullName>
        <formula>Ingredients__c+IngredientsCGL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingredients Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ingredients__c</fullName>
        <label>Ingredients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsDistributorCreatingFormulasYes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Distributor creates feed formulas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsFeedCompanyCreatingFormulasYes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feed company makes feed formulas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Cost_Analyst_Med_S__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Liczy się dla niego przede wszystkim dobry wynik hodowlany, koszty są drugorzędne i liczy je orientacyjnie uwzględniając główne pozycje tj. koszt zwierząt, weterynarz, media.</inlineHelpText>
        <label>Partially, but performance counts most</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Cost_Analyst_No_L__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Nie liczy szczegółowo wydatków, liczy się przede wszystkim najniższa cena zakupu paszy.</inlineHelpText>
        <label>No, the lowest price counts the most</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Cost_Analyst_Yes_E__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tak, analizuje wszystkie koszty w dłuższej perspektywie np. media, koszty pracowników, koszt miejsca tuczowego (amortyzacja budynku), zakup zwierząt, zużycie paszy i koszty weterynaryjne.</inlineHelpText>
        <label>Yes, analyze all costs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Noah_active_user__c</fullName>
        <formula>IF(OR(FIND(&quot;B2B&quot;, CreatedBy.UserRole.Name)&gt;0,FIND(&quot;Rzeżuchowski B2C Dairy&quot;, CreatedBy.UserRole.Name)&gt;0,FIND(&quot;Rzeżuchowski Team B2C Dairy&quot;, CreatedBy.UserRole.Name)&gt;0),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Noah active user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Self_Mixing_No__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Nie posiada zasobów.</inlineHelpText>
        <label>No, does not mix</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Self_Mixing_Partially__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tylko w niepełnym stopniu tj. ma zboże i posiada suszarnię, ale bez mieszalni.</inlineHelpText>
        <label>Only can mix partially</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Self_Mixing_Yes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tak, posiada własną mieszalnię.</inlineHelpText>
        <label>Yes, owns mixer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_For_Changes_Med_S__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Czasami jest otwarty na zmiany, ale oczekuje sprawdzonych rozwiązań, które rozwiążą jego problemy.</inlineHelpText>
        <label>Sometimes is open conditionally</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_For_Changes_No_L__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Niechętnie przyjmuje zmiany, bowiem liczy się dla niego przede wszystkim bezpieczeństwo i nie lubi ryzykować lub wprowadza zmianę, gdy zmusza go do tego sytuacja.</inlineHelpText>
        <label>No, unlikely accepts changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_For_Changes_Yes_E__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Jest otwarty na zmiany, a często sam o nie zabiega.</inlineHelpText>
        <label>Yes, is open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PetFood_Sales_Competitors__c</fullName>
        <label>PetFood Sales Competitors</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-4</fullName>
                </value>
                <value>
                    <fullName>&gt;4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pet_Food_Total__c</fullName>
        <formula>Petfood__c+PetfoodCGL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pet Food Total</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pet_Foot_Share_of_Wallet__c</fullName>
        <formula>IF(Pet_Food_Total__c=0, 0, PetfoodCGL__c / Pet_Food_Total__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pet Foot Share of Wallet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PetfoodCGL__c</fullName>
        <label>Petfood CGL</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Petfood__c</fullName>
        <label>Petfood</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PorkCGL_Complete_Feed_Sows_Hogs__c</fullName>
        <label>Pork Complete Feed Sows Hogs CGL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PorkCGL_Concentrates_Sows_Hogs__c</fullName>
        <label>Pork Concentrates Sows Hogs CGL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PorkCGL_Piglets__c</fullName>
        <label>Pork Piglets CGL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PorkTOT_Complete_Feed_Sows_Hogs__c</fullName>
        <formula>Pork_Complete_Feed_Sows_Hogs__c+PorkCGL_Complete_Feed_Sows_Hogs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pork Complete Feed Sows Hogs Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PorkTOT_Concentrates_Sows_Hogs__c</fullName>
        <formula>Pork_Concentrates_Sows_Hogs__c+PorkCGL_Concentrates_Sows_Hogs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pork Concentrates Sows Hogs Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PorkTOT_Piglets__c</fullName>
        <formula>Pork_Piglets__c+  PorkCGL_Piglets__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pork Piglets Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pork_Complete_Feed_Sows_Hogs__c</fullName>
        <label>Pork Complete Feed Sows Hogs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pork_Concentrates_Sows_Hogs__c</fullName>
        <label>Pork Concentrates Sows Hogs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pork_Piglets__c</fullName>
        <label>Pork Piglets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pork_Sales_Competitors__c</fullName>
        <label>Pork Sales Competitors</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-4</fullName>
                </value>
                <value>
                    <fullName>&gt;4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pork_Share_of_Wallet__c</fullName>
        <formula>IF(Pork_Total__c=0, 0, Pork_Total_Cargill__c / Pork_Total__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pork Share of Wallet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pork_Total_Cargill__c</fullName>
        <formula>PorkCGL_Complete_Feed_Sows_Hogs__c+PorkCGL_Concentrates_Sows_Hogs__c+PorkCGL_Piglets__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pork Total Cargill</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pork_Total_Competitor__c</fullName>
        <formula>Pork_Complete_Feed_Sows_Hogs__c+Pork_Concentrates_Sows_Hogs__c+Pork_Piglets__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pork Total Competitor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pork_Total__c</fullName>
        <formula>Pork_Total_Cargill__c+Pork_Total_Competitor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pork Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PoultryProducts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offers complete feed for poultry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Poultry_Sales_Competitors__c</fullName>
        <label>Poultry Sales Competitors</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-4</fullName>
                </value>
                <value>
                    <fullName>&gt;4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Poultry_Share_of_Wallet__c</fullName>
        <formula>IF(Poultry_Total__c=0, 0, val_PoultryCGL_Sales__c / Poultry_Total__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Poultry Share of Wallet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Poultry_Total__c</fullName>
        <formula>val_Poultry_Sales__c+val_PoultryCGL_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Poultry Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Management_Med_S__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Dywersyfikuje odbiorców, chcąc tym samym zrównoważyć ryzyko.</inlineHelpText>
        <label>Diverse buyers balancing risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_Management_No_L__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Często zmienia odbiorców lub działa na wolnym rynku, akceptując związane z tym ryzyko, ale liczy na wyższy zysk.</inlineHelpText>
        <label>No, sales on free market</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_Management_Yes_E__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Jest lojalny wobec odbiorców z którymi współpracuje na podstawie zawartych umów (tj. ubojnie, odbiorcy jaj itp). Akceptuje niższy zysk, ale dzięki temu ma pewny rynek zbytu i cenę sprzedaży, które pokrywają mu koszty.</inlineHelpText>
        <label>Yes, contract all sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <formula>RecordType.Name</formula>
        <label>RecordType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Account_Name__c</fullName>
        <label>Account Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Commercial Customer, Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Segmentations</relationshipLabel>
        <relationshipName>Survey_Segmentations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Segm_9Box__c</fullName>
        <label>Segm_9Box</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Limited</fullName>
                </value>
                <value>
                    <fullName>Selected</fullName>
                </value>
                <value>
                    <fullName>Extensive</fullName>
                </value>
                <value>
                    <fullName>Advisory Not Needed</fullName>
                </value>
                <value>
                    <fullName>Self Mixing</fullName>
                </value>
                <value>
                    <fullName>Not Classified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segm_9Box_recomm__c</fullName>
        <label>Segm_9Box_recomm</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Baxter (Podstawowy)</fullName>
                </value>
                <value>
                    <fullName>Baxter (Średniozaawansowany)</fullName>
                </value>
                <value>
                    <fullName>Baxter (Wymagający)</fullName>
                </value>
                <value>
                    <fullName>Dennis (Wymagający)</fullName>
                </value>
                <value>
                    <fullName>Spence</fullName>
                </value>
                <value>
                    <fullName>Limited</fullName>
                </value>
                <value>
                    <fullName>Selected</fullName>
                </value>
                <value>
                    <fullName>Extensive</fullName>
                </value>
                <value>
                    <fullName>Advisory Not Needed</fullName>
                </value>
                <value>
                    <fullName>Self Mixing</fullName>
                </value>
                <value>
                    <fullName>Service by Dealer - no potential</fullName>
                </value>
                <value>
                    <fullName>Long Term Integration - no potential</fullName>
                </value>
                <value>
                    <fullName>ASF/A-H1N1, Bird Flu, BSE - no potential</fullName>
                </value>
                <value>
                    <fullName>Doubled account - no potential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segm_Y_Axis__c</fullName>
        <label>Segm Y-Axis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>Not Classified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SmallerConsumersYes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dennis sales reach small consumers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Cargill_Sales__c</fullName>
        <formula>Dairy_Total_Cargill__c+PetfoodCGL__c+Pork_Total_Cargill__c+val_PoultryCGL_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cargill Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Competitor_Sales__c</fullName>
        <formula>Dairy_Total_Competitor__c+Petfood__c+Pork_Total_Competitor__c+val_Poultry_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Competitor Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Feed_Sales__c</fullName>
        <formula>Dairy_Total__c+Pet_Food_Total__c+Pork_Total__c+Poultry_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Feed Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Share_of_Wallet__c</fullName>
        <formula>IF(Total_Feed_Sales__c=0, 0, Total_Cargill_Sales__c / Total_Feed_Sales__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Share of Wallet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <formula>$UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Want_To_Invest_Med_S__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ma pomysły na rozwój, ale tylko &quot;w głowie&quot;, wie, że chciałby &quot;coś&quot; osiągnąć, ale nie jest to sprecyzowane (co i kiedy).</inlineHelpText>
        <label>Has goals but not precised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Want_To_Invest_No_L__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Nie ma planu, nie chce się rozwijać, a obecna sytuacja jest dla niego wystarczająca. Jeśli planuje zmiany to tylko w odpowiedzi na bieżące problemy, ale nie oczekuje konsultacji w zakresie nowych inwestycji.</inlineHelpText>
        <label>No, has no plans or manage on his own</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Want_To_Invest_Yes_E__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tak, ma szczegółowy plan rozwoju na najbliższe lata i jest otwarty na współprace.</inlineHelpText>
        <label>Yes, has detailed plan for next years</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WantsEmployPHandPOS_Yes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wants to employ new REP and have new POS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Week_no__c</fullName>
        <formula>MOD(FLOOR( ( DATEVALUE( CreatedDate ) - DATE(2016,01,01))/7),52)+1</formula>
        <label>Week no</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WideOfferYes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offers wide sales feed offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year_Month__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE(CreatedDate)))&amp;&quot;.&quot;&amp;LPAD(text(MONTH(DATEVALUE(CreatedDate))), 2, &apos;0&apos; )</formula>
        <label>Year Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sc_Advisory_Needed_Answers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does need advisory?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sc_DealerSalesLevel__c</fullName>
        <defaultValue>&quot;&gt;&quot;</defaultValue>
        <description>Jaką część całościowej sprzedaży paszy Dystrybutora stanowią premiksy w stosunku do koncentratów?</description>
        <label>Premix vs Concentrates</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sc_Is_Cost_Analyst_Answers__c</fullName>
        <defaultValue>&quot;&gt;&quot;</defaultValue>
        <inlineHelpText>Czy hodowca prowadząc biznes analizuje szczegółowo koszty?</inlineHelpText>
        <label>Does analyze costs in details?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sc_Is_Open_For_Changes_Answers__c</fullName>
        <defaultValue>&quot;&gt;&quot;</defaultValue>
        <inlineHelpText>Czy hodowca jest otwarty na zmiany w zakresie nowych produktów i usług?</inlineHelpText>
        <label>Is open for changes?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
</CustomObject>